objects/HealthCloudGA__EhrEncounterParticipant__c.object
<CustomObject>
    <fields>
        <fullName>HealthCloudGA__Encounter__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Encounter</label>
        <referenceTo>HealthCloudGA__EhrEncounter__c</referenceTo>
        <relationshipLabel>Encounter Participants</relationshipLabel>
        <relationshipName>EncounterParticipants</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>HealthCloudGA__EndDate__c</fullName>
        <label>End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>HealthCloudGA__IsRestricted__c</fullName>
        <defaultValue>false</defaultValue>
        <label>IsRestricted</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>HealthCloudGA__IsVisibleOnPatientCard__c</fullName>
        <description>If returns true, the record will appear on Patient Card</description>
        <formula>true</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>IsVisibleOnPatientCard</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>HealthCloudGA__Practitioner__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Practitioner</label>
        <referenceTo>HealthCloudGA__EhrPractitioner__c</referenceTo>
        <relationshipLabel>Encounter Participants</relationshipLabel>
        <relationshipName>EncounterParticipants</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>HealthCloudGA__RelatedPerson__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Related Person</label>
        <referenceTo>HealthCloudGA__EhrRelatedPerson__c</referenceTo>
        <relationshipLabel>Encounter Participants</relationshipLabel>
        <relationshipName>EncounterParticipants</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>HealthCloudGA__SourceSystemId__c</fullName>
        <externalId>true</externalId>
        <label>Source System ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HealthCloudGA__SourceSystemModified__c</fullName>
        <description>When last updated</description>
        <label>Source System Modified</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>HealthCloudGA__SourceSystem__c</fullName>
        <defaultValue>&quot;Health1-&quot;+$Organization.Id</defaultValue>
        <description>Identifies the system that created the record and owns update rights to it.</description>
        <inlineHelpText>Identifies the system that created the record and owns update rights to it. Defaults to Health1 for manually created records.</inlineHelpText>
        <label>Source System</label>
        <length>64</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HealthCloudGA__StartDate__c</fullName>
        <label>Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>HealthCloudGA__TypeCode__c</fullName>
        <description>Symbol in syntax defined by the system</description>
        <label>Type Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HealthCloudGA__TypeLabel__c</fullName>
        <label>Type Label</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HealthCloudGA__TypeSystem__c</fullName>
        <description>Identity of the terminology system</description>
        <label>Type System</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>EHR Encounter Participant</label>
    <nameField>
        <displayFormat>Part-{0}</displayFormat>
        <label>EHR Encounter Participant ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>EHR Encounter Participants</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>